<resources>
    <string name="app_name">Chess by Tapsa</string>
    <string name="action_new_game">New game</string>
    <string name="action_moves2">AI thinks 2 moves forward</string>
    <string name="action_moves3">AI thinks 3 moves forward</string>
    <string name="action_moves4">AI thinks 4 moves forward</string>
    <string name="action_moves5">AI thinks 5 moves forward</string>
    <string name="action_moves6">AI thinks 6 moves forward</string>
    <string name="action_AIvsAI">Toggle AI playing for you</string>
    <string name="king">King</string>
    <string name="queen">Queen</string>
    <string name="rook">Rook</string>
    <string name="bishop">Bishop</string>
    <string name="knight">Knight</string>
    <string name="pawn">Pawn</string>
    <string name="time_elapsed">Time elapsed</string>
    <string name="ais_turn">AI\'s turn</string>
    <string name="your_turn">Your turn</string>
    <string name="illegal_move">Illegal move!</string>
    <string name="example_move">Make a move like e2-e4</string>
    <string name="ai_is_thinking">AI is thinking</string>
    <string name="starting_new_game">Starting a new game</string>
    <string name="ai_thinks_2_moves">AI now thinks 2 moves ahead</string>
    <string name="ai_thinks_3_moves">AI now thinks 3 moves ahead</string>
    <string name="ai_thinks_4_moves">AI now thinks 4 moves ahead</string>
    <string name="ai_thinks_5_moves">AI now thinks 5 moves ahead</string>
    <string name="ai_thinks_6_moves">AI now thinks 6 moves ahead</string>
    <string name="ai_plays_for_you">AI will play your moves</string>
    <string name="play_yourself">Play your own moves</string>
    <string name="draw">DRAW</string>
    <string name="legal_moves">Legal moves</string>
    <string name="check">Check!</string>
    <string name="game_ended">GAME ENDED</string>
    <string name="ai_made_move">AI made a move</string>
    <string name="you_won">You won</string>
    <string name="ai_won">Black won</string>
</resources>
