<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_new_game"
        android:orderInCategory="1"
        android:title="@string/action_new_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moves2"
        android:orderInCategory="2"
        android:title="@string/action_moves2"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moves3"
        android:orderInCategory="3"
        android:title="@string/action_moves3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moves4"
        android:orderInCategory="4"
        android:title="@string/action_moves4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moves5"
        android:orderInCategory="5"
        android:title="@string/action_moves5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_moves6"
        android:orderInCategory="6"
        android:title="@string/action_moves6"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_AIvsAI"
        android:checkable="true"
        android:orderInCategory="7"
        android:title="@string/action_AIvsAI"
        app:showAsAction="never" />
</menu>
